--- a/ChatAppServer/ChatAppServer.WebAPI/ChatAppServer.WebAPI.csproj
+++ b/ChatAppServer/ChatAppServer.WebAPI/ChatAppServer.WebAPI.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="TS.DefaultCorsPolicy" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
