--- a/ChatAppServer/ChatAppServer.WebAPI/appsettings.json
+++ b/ChatAppServer/ChatAppServer.WebAPI/appsettings.json
@@ -9,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "server=31.186.11.162;database=ChatApp;user=adminChatApp;password=P9h4k4f%3;TrustServerCertificate=True;"
+    "SqlServer": "server=HELLO;database=ChatApp;user=HELLO;password=HELLO;TrustServerCertificate=True;"
   }
 }
